Introduce CLI function to encode

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>0.4-SNAPSHOT</version>
   <name>pitch-converter</name>
   <url>http://maven.apache.org</url>
+    <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -19,18 +23,41 @@
       <artifactId>picocli</artifactId>
       <version>3.6.0</version>
     </dependency>
+	<dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.5.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<executions>
+		  <execution>
+			<phase>package</phase>
+			<goals>
+			  <goal>single</goal>
+			</goals>
+			<configuration>
+			  <archive>
+			    <manifest>
+				  <mainClass>com.cgreen.pitchconverter.PitchConverter</mainClass>
+				</manifest>
+			  </archive>
+			  <descriptorRefs>
+			    <descriptorRef>jar-with-dependencies</descriptorRef>
+			  </descriptorRefs>
+			</configuration>
+		  </execution>
+		</executions>
+	  </plugin>
     </plugins>
   </build>
 </project>
