--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.13.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.audiveris/proxymusic -->
+        <dependency>
+            <groupId>org.audiveris</groupId>
+            <artifactId>proxymusic</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
