--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <name>pitch-converter</name>
     <url>http://maven.apache.org</url>
     <properties>
-        <maven.compiler.source>1.11</maven.compiler.source>
-        <maven.compiler.target>1.11</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
@@ -54,6 +54,12 @@
             <groupId>org.audiveris</groupId>
             <artifactId>proxymusic</artifactId>
             <version>3.0.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
     </dependencies>
     <build>
