--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
             <version>2.14.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.audiveris/proxymusic -->
+        <!--  Looks like this link is dead. Investigate alternative solutions. -->
         <dependency>
             <groupId>org.audiveris</groupId>
             <artifactId>proxymusic</artifactId>
