--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,9 @@
                 <version>3.2.0</version>
                 <configuration>
                     <archive>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
                         <manifest>
                             <mainClass>com.cgreen.pitchconverter.PitchConverter</mainClass>
                         </manifest>
